build/resources/test/Fall_21_Test_Cases/Bad/LO-2/lvl2-bad-medium-15.lo
// *Bad testcase*
// Too many arguments
// Will pass compilation but fail at runtime
// Points = 3

int main()
{
    int a;
    {
     a=5;
     return foo(a,a);
    }
}

int foo(int a) {
   {return a;}
}